# audgit

./: .gitignore  JUSTFILE  README.md  example.env  pyproject.toml
audgit/: claude_call.py  code_review.py  crawler.py  descrips.py  get_repo_files.py  lightning.py  main.py  monitor.py
tests/: test_monitor.py
