[tool.poetry]
name = "audgit"
version = "0.1.0"
description = ""
authors = ["Christopher David <chris@arcadelabs.co>", "Erik Aronesty <erik@q32.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynostr = {extras = ["websocket-client"], version = "^0.6.2"}
beautifulsoup4 = "^4.12.2"
pygithub = "^1.59.0"

[tool.poetry.scripts]
audgit = "audgit.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
